2001-12-18  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSBrowser.m:
	NSBrowserColumn: new methods initWithCoder & encodeWithCoder, it now 
	complies to NSCoding
	[NSBrowser -initWithCoder:] & [NSBrowser -encodeWithCoder:]: major
	update to previous implementation. It is now usable with Gorm and 
	should not generate memory leaks anymore.
	
Mon Dec 17 23:54:35 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSInputManager.m: New class which loads key binding files
	and process keys basing on loaded key bindings.
	* Headers/gnustep/gui/NSInputManager.h: Updated.  Removed methods
	deprecated in apple doc - there is no point in trying to be
	compatible with internal deprecated methods of a foreign system.
	* Source/NSResponder.m ([-interpretKeyEvents:]): Pass the key
	events to the current input manager.
	([+initialize]): Added call to NSInputManager to have it init
	itself.
	* KeyBindings/: New directory.
	* KeyBindings/GNUmakefile: New file.
	* KeyBindings/DefaultKeyBindings.dict: New file.
	* Documentation/gsdoc/GNUmakefile (Gui_GSDOC_FILES): Added
	DefaultsSummary.gsdoc.
	* Documentation/gsdoc/DefaultsSummary.gsdoc: Documented 
	the GSDefaultKeyBindings and GSCustomKeyBindings options.
	* Documentation/gsdoc/DefaultsSummary.html: Regenerated.
	
2001-12-17  Pierre-Yves Rivaille  <pyrivail@ens-lyon.fr>

        * Source/NSButtonCell.m ([NSButtonCell -drawInteriorWithFrame:inView:])
	removed the code that drew the background (osx doesn't draw background)
	* Source/NSProgressIndicator.m ([NSProgressIndicator +initialize]): 
	retain the fillColour.

2001-12-17  Adam Fedor  <fedor@gnu.org>

	* Source/*m: Add basic markup for autogsdoc generation.
	(various locations): Remove semi-colon at end of method names.
	NSSliderCell.m, NSSlider.m, NSTableColumn.m, NSView.m, NSWindow.m:
	Add documentation formerly in gsdoc files to comments.

	* Headers/gnustep/gui/NSColorList.h, NSPageLayout.h,
	NSPrintInfo.h, NSPrintOperation.h, NSPrinter.h, NSView.h: Correct