@@ -1,5 +1,9 @@
 2001-12-18  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
 
+	* Source/NSWindow.m ([NSWindow -setTitleWithRepresentedFilename:]): 
+	([NSWindow -setTitle:]): 
+	([NSWindow -_initBackendWindow:]): 
+	changed cString into lossyCString during DPStitlewindow calls
 	* Source/NSBrowser.m:
 	NSBrowserColumn: new methods initWithCoder & encodeWithCoder, it now 
 	complies to NSCoding
